DEC-86 Fix up and update swagger doc
