# src/components/users/users.routes.ts
@@ -4,7 +4,7 @@ import { getUserProfileOfMe, updateUserProfile } from "./users.controllers";
 
 const router = express.Router();
 
-router.route("/me").post(updateUserProfile);
+router.route("/me").post(authorizeUser, updateUserProfile);
 router.route("/me").get(authorizeUser, getUserProfileOfMe);
 
 export { router };
